--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -62,7 +62,7 @@
         <tabset>
           <tab>
             <tab-heading>
-              <button class="btn brand-brown-bg white text-uppercase"><i class="fa fa-play-circle-o"></i> View Here</button>
+              <button class="btn brand-brown-bg brand-primary-lighter text-uppercase"><i class="fa fa-play-circle-o"></i> View Here</button>
             </tab-heading>
 
             <div class="inner-stories-view" ng-repeat="view in views">
@@ -78,7 +78,7 @@
                       <div class="col-md-6">
                         <div class="inner-view-left">
                           <div class="get-round view-left">
-                            <span class="text-uppercase brand-brown-dark-bg">Lost</span>
+                            <span class="lost text-uppercase brand-brown-dark-bg">Lost</span>
                             <span class="font-vista">{{view.weight}}kgs</span>
                           </div>
                           <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span><br>
@@ -100,7 +100,7 @@
                       <div class="col-md-6">
                         <div class="inner-view-right">
                           <div class="get-round pull-right view-right">
-                            <span class="text-uppercase brand-brown-dark-bg">Lost</span>
+                            <span class="lost text-uppercase brand-brown-dark-bg">Lost</span>
                             <span class="font-vista">{{view.weight}}kgs</span>
                           </div>
                           <span class="name text-right brand-brown-dark font-semibold">{{view.name}}</span><br>
@@ -153,7 +153,7 @@
                           <img ng-src="{{read.image}}" alt="" class="img-responsive">
                         </div>
                         <div class="get-round img-left">
-                          <span class="text-uppercase brand-brown-dark-bg">Lost</span>
+                          <span class="lost text-uppercase brand-brown-dark-bg">Lost</span>
                           <span class="font-vista">{{read.weight}}kgs</span>
                         </div>
                       </div>
@@ -171,7 +171,7 @@
                           <img ng-src="{{read.image}}" alt="" class="img-responsive">
                         </div>
                         <div class="get-round img-right">
-                          <span class="text-uppercase brand-brown-dark-bg">Lost</span>
+                          <span class="lost text-uppercase brand-brown-dark-bg">Lost</span>
                           <span class="font-vista">{{read.weight}}kgs</span>
                         </div>
                       </div>
