--- a/views/header.html
+++ b/views/header.html
@@ -18,7 +18,7 @@
                 <h1>
                   <a href="#/home">
                     <img src="img/logo.png" alt="">
-                    <span>for Health &amp; Immunity</span>
+                    <span class="font-baubodi">for</span> Health &amp; Immunity
                   </a>
                 </h1>
               </div>
@@ -31,25 +31,25 @@
 
             <div class="row">
               <div class="col-md-6 col-sm-5 col-xs-12">
-                <div class="social-links">
+                <div class="social-links text-right">
                   <ul>
-                    <li><a href="#/cart" class="brand-primary"><i class="fa fa-shopping-cart"></i></a></li>
-                    <li><a href="https://www.facebook.com/" class="brand-primary"><i class="fa fa-facebook "></i></a></li>
-                    <li><a href="https://twitter.com/" class="brand-primary"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://instagram.com/" class="brand-primary"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.youtube.com/" class="brand-primary"><i class="fa fa-youtube"></i></a></li>
-                    <li><a href="https://www.pinterest.com/" class="brand-primary"><i class="fa fa-pinterest-p"></i></a></li>
+                    <li><a href="#/cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    <li><a href="https://www.facebook.com/"><i class="fa fa-facebook "></i></a></li>
+                    <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest-p"></i></a></li>
                   </ul>
                 </div>
               </div>
               <div class="col-md-3 col-sm-4 col-xs-6">
-                <div class="contact-tel">
-                  <a class="brand-primary font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
+                <div class="contact-tel letter-space">
+                  <a class="font-semibold" href="tel:+912261312222">+91 22 6131 2222</a>
                 </div>
               </div>
-              <div class="col-md-2 col-sm-3 col-xs-6">
-                <div class="signin">
-                  <a class="brand-primary text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
+              <div class="col-md-3 col-sm-3 col-xs-6">
+                <div class="signin letter-space text-right">
+                  <a class="text-uppercase font-semibold" href="" ng-click="openLogin();">Sign In</a>
                 </div>
               </div>
             </div>
