--- a/views/footer.html
+++ b/views/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2 col-xs-6">
-                <div class="menu text-uppercase">
+                <div class="menu text-uppercase letter-space">
                     <ul>
                         <li><a href="" title="Home">home</a></li>
                         <li><a href="" title="Cool Sclupting">Cool Sclupting</a></li>
@@ -73,7 +73,7 @@
                             </div>
                         </form>
                     </div>
-                    <div class="social-links foot-sociallinks brand-primary-light">
+                    <div class="social-links social-links2 foot-sociallinks brand-primary-light">
                         <ul>
                             <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="" traget="_blank" class="brand-primary-lighter"><i class="fa fa-twitter"></i></a></li>
