--- a/sass/main.scss
+++ b/sass/main.scss
@@ -446,9 +446,10 @@ button {
     }
     .health-descp {
       width: 270px;
-      margin: 20px 0;
+      margin: 20px 0 30px;
     }
     .know-more {
+      padding: 14px 40px;
       position: relative;
       top: 20px;
       font-weight: bold;
@@ -489,7 +490,7 @@ button {
     padding-right: 30px;
   }
   .info {
-    border-right: 2px solid $brand-brown-dark;
+    border-right: 1px solid $brand-brown-dark;
   }
   .no-border {
     border: none;
@@ -501,8 +502,8 @@ button {
 .diet-info {
   padding: 0 40px;
   h4 {
-    @include margin(0 0 20px 0);
-    font-size: 24px;
+    @include margin(0 0 16px 0);
+    font-size: 27px;
   }
   .diet-holder {
     width: 380px;
@@ -515,9 +516,10 @@ button {
   .descp {
     min-height: 100px;
     width: 380px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 15px 0;
+    font-size: 16px;
     text-align: justify;
+    word-spacing: 1px;
   }
 }
 .section-story {
@@ -556,7 +558,7 @@ button {
     }
   }
   .view-detail {
-    padding-top: 15px;
+    padding: 10px 0 0 15px;
     .name {
       width: 70%;
       margin: 0;
@@ -620,7 +622,7 @@ button {
   }
   .blog-imginfo {
     min-height: 100px;
-    padding: 30px;
+    padding: 30px 30px 30px 10px;
     border-bottom: 2px solid $brand-brown;
     p {
       width: 82%;
@@ -632,8 +634,10 @@ button {
 .blog-main {
   padding: 25px;
   min-height: 576px;
+  margin: 0 25px 0 0;
 }
 .askqts {
+  margin: 0 0 0 25px;
   form {
     select {
       background-color: $brand-primary;
@@ -1307,7 +1311,7 @@ footer {
       }
       @include placeholder {
         color: $brand-primary-lighter;
-      };
+      }
     }
     .btn-submit {
       width: 50px;
@@ -1412,10 +1416,12 @@ footer {
 .filters {
   input[type="checkbox"] +label {
     padding: 0;
-    font-size: 14px;
+    font-size: 16px;
+    letter-spacing: 1px;
   }
   input[type="checkbox"] +label span {
     border: 1px solid $brand-brown-dark;
+    margin-right: 10px;
   }
   input[type="checkbox"]:checked + label span {
     background-color: $brand-brown-dark;
