--- a/views/content/imageconsulting.html
+++ b/views/content/imageconsulting.html
@@ -139,8 +139,8 @@
 
                 <div class="col-md-4">
                   <div class="session-number brand-primary-bg text-center">
-                    <span>2</span>
-                    <h4 class="text-uppercase white">Sessions</h4>
+                    <span class="font-gotham-bold">2</span>
+                    <h4 class="text-uppercase white font-gotham-bold">Sessions</h4>
                   </div>
                 </div>
 
@@ -149,12 +149,12 @@
                   <div class="row">
                       <div class="col-md-6">
                         <div class="inner-session">
-                          <p class="text-uppercase white charge">Charges</p>
+                          <p class="text-uppercase white charge font-gotham-bold">Charges</p>
                           <p>Rs 10000</p>
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block">Pick any 2</span> of the above services</p>
+                        <p class="text-uppercase services"><span class="block font-gotham-bold">Pick any 2</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -170,8 +170,8 @@
 
                 <div class="col-md-4">
                   <div class="session-number brand-primary-bg text-center">
-                    <span>8</span>
-                    <h4 class="text-uppercase white">Sessions</h4>
+                    <span class="font-gotham-bold">8</span>
+                    <h4 class="text-uppercase white font-gotham-bold">Sessions</h4>
                   </div>
                 </div>
 
@@ -180,12 +180,12 @@
                     <div class="row">
                       <div class="col-md-6">
                         <div class="inner-session">
-                          <p class="text-uppercase white charge">Charges</p>
+                          <p class="text-uppercase white charge font-gotham-bold">Charges</p>
                           <p>Rs 27500</p>
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block">Pick any 8</span> of the above services</p>
+                        <p class="text-uppercase services"><span class="block font-gotham-bold">Pick any 8</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -206,8 +206,8 @@
 
                 <div class="col-md-4">
                   <div class="session-number brand-primary-bg text-center">
-                    <span>4</span>
-                    <h4 class="text-uppercase white">Sessions</h4>
+                    <span class="font-gotham-bold">4</span>
+                    <h4 class="text-uppercase white font-gotham-bold">Sessions</h4>
                   </div>
                 </div>
 
@@ -216,12 +216,12 @@
                     <div class="row">
                       <div class="col-md-6">
                         <div class="inner-session">
-                          <p class="text-uppercase white charge">Charges</p>
+                          <p class="text-uppercase white charge font-gotham-bold">Charges</p>
                           <p>Rs 15000</p>
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block">Pick any 4</span> of the above services</p>
+                        <p class="text-uppercase services"><span class="block font-gotham-bold">Pick any 4</span> of the above services</p>
                       </div>
                     </div>
                   </div>
@@ -237,8 +237,8 @@
 
                 <div class="col-md-4">
                   <div class="session-number brand-primary-bg text-center">
-                    <span>12</span>
-                    <h4 class="text-uppercase white">Sessions</h4>
+                    <span class="font-gotham-bold">12</span>
+                    <h4 class="text-uppercase white font-gotham-bold">Sessions</h4>
                   </div>
                 </div>
 
@@ -247,12 +247,12 @@
                     <div class="row">
                       <div class="col-md-6">
                         <div class="inner-session">
-                          <p class="text-uppercase white charge">Charges</p>
+                          <p class="text-uppercase white charge font-gotham-bold">Charges</p>
                           <p>Rs 42500</p>
                         </div>
                       </div>
                       <div class="col-md-6">
-                        <p class="text-uppercase services"><span class="block">Make your</span> plan with tina</p>
+                        <p class="text-uppercase services"><span class="block font-gotham-bold">Make your</span> plan with tina</p>
                       </div>
                     </div>
                   </div>
