--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -223,7 +223,6 @@
   @include margin(0 0 100px);
   h2 {
     @include margin(100px 0);
-    font-weight: bold;
     letter-spacing: 1px;
   }
   .session-one, .session-two {
@@ -235,14 +234,12 @@
         display: inline-block;
         background-color: white;
         font-size: 54px;
-        font-weight: bold;
         border: 5px solid $brand-primary;
         border-radius: 50%;
       }
       h4 {
         @include padding(0 0 10px 0);
         font-size: 28px;
-        font-weight: bold;
       }
     }
     .session-charges {
@@ -252,10 +249,7 @@
       .inner-session {
         border-right: 3px solid white;
       }
-      .charge {
-        font-size: 20px;
-        font-weight: bold;
-      }
+      .charge { font-size: 20px; }
       p + p {
         @include margin(-10px 0 0 0);
         font-size: 28px;
@@ -263,7 +257,6 @@
       .services {
         @include margin(0 0 0 -40px);
         font-size: 18px;
-        span { font-weight: bold; }
       }
     }
   }
@@ -583,6 +576,7 @@
     }
   }
 }
+.contact-map { @include margin(15px 0 0); }
 .contact-query {
   h4 {
     font-size: 28px;
@@ -595,11 +589,16 @@
       font-style: italic;
       border: 1px solid $brand-primary;
       border-radius: 0;
+      @include placeholder {
+        font-family: $font-baubodi;
+        font-weight: bold;
+        letter-spacing: 2px;
+      };
     }
     textarea { @include size(100%, 100px); }
   }
   .submit-button {
-    @include margin(20px 0 0);
+    @include margin(25px 0 0);
     a { @include padding(15px 70px); }
   }
 }
@@ -640,7 +639,7 @@
   }
   .filters {
     @include margin(30px 0);
-    @include padding(10px 20px);
+    @include padding(20px);
     h3 { @include margin(0 0 10px 10px); }
     div {
       @include margin(0 0 0 8px);
@@ -740,7 +739,7 @@
   }
 }
 .product-also-like {
-  @include margin(30px 0 100px);
+  @include margin(40px 0 100px);
   h3 {
     @include margin(0 0 20px);
     font-size: 28px;
