--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -12,7 +12,7 @@
             <h4 class="text-uppercase brand-brown-dark font-semibold">Mumbai</h4>
 
             <div class="tardeo">
-              <p class="brand-primary">Head Office, Tardeo</p>
+              <p class="brand-primary font-semibold">Head Office, Tardeo</p>
               <span>432/432/403, Arun Chambers,</span>
               <br>
               <span>Next to A/C Market,</span>
@@ -27,7 +27,7 @@
             </div>
 
             <div class="santacruz">
-              <p class="brand-primary">Santacruz</p>
+              <p class="brand-primary font-semibold">Santacruz</p>
               <span>1st floor, Sanghvi Udayan, V L Mehta</span>
               <br>
               <span>Marg, JVPD scheme, Vile Parle</span>
