--- a/views/content/team.html
+++ b/views/content/team.html
@@ -24,8 +24,8 @@
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
-              <h3 class="brand-brown-dark">Nidhi Agarwal</h3>
-              <h4 class="brand-primary">Senior Nutritionist</h4>
+              <h3 class="brand-brown-dark font-semibold">Nidhi Agarwal</h3>
+              <h4 class="brand-primary font-semibold">Senior Nutritionist</h4>
               <p>Nidhi has been with Selfcare since 2011. She has done her Masters in Clinical Nutrition and Dietetics, She consults clients at Tardeo and Juhu and is also involved in online consultations. In her leisure time Nidhi enjoys listening to music, reading books about nutrition</p>
             </div>
           </div>
@@ -42,8 +42,8 @@
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
-              <h3 class="brand-brown-dark">Hiral Shah</h3>
-              <h4 class="brand-primary">Nutritionist</h4>
+              <h3 class="brand-brown-dark font-semibold">Hiral Shah</h3>
+              <h4 class="brand-primary font-semibold">Nutritionist</h4>
               <p>Hiral  joined Selfcare in 2014. Hiral  has  pursued  her  Masters in Food  Science  and  Nutrition  from  SNDT  University, Mumbai.  She’s been awarded “Dr. K.U. Naram Award”, instituted by Association of Food Scientist and Technologist (INDIA), Mumbai chapter for securing third rank in the final year of  Msc. Food Science and Nutrition.
 She consults clients at Selfcare’s Tardeo branch  as well as handles our online consultation where she is in touch with our National and International clients.</p>
             </div>
@@ -61,8 +61,8 @@ She consults clients at Selfcare’s Tardeo branch  as well as handles our onlin
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
-              <h3 class="brand-brown-dark">Vibha Rane</h3>
-              <h4 class="brand-primary">Head of Operations, Senior Nutritionist</h4>
+              <h3 class="brand-brown-dark font-semibold">Vibha Rane</h3>
+              <h4 class="brand-primary font-semibold">Head of Operations, Senior Nutritionist</h4>
               <p>Nutritionist Vibha is Selfcare’s second employee, having joined in 2002.</p>
               <p>A B.Com graduate from Mumbai’s Hinduja College, she is armed with an additional diploma in Software Designing from SSI. Vibha also holds a diploma in Nutrition &amp; Dietetics and a Certificate in an advance course of Nutrition.
 Her work profile at Selfcare includes administration, accounts, handling legal matters, visiting branch offices for training nutritionists, updating new policies and information, as well as consulting clients from Selfcare’s Tardeo branch.</p>
@@ -82,8 +82,8 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
-              <h3 class="brand-brown-dark">Deepti Nair</h3>
-              <h4 class="brand-primary">Senior Nutritionist, Santacruz Branch Head</h4>
+              <h3 class="brand-brown-dark font-semibold">Deepti Nair</h3>
+              <h4 class="brand-primary font-semibold">Senior Nutritionist, Santacruz Branch Head</h4>
               <p>Deepti has been with Selfcare since 2011. She has done her Masters in Science, PGD in Nutrition and Dietetics, certificate course in Sports Nutrition and has done a diabetes educator course.</p>
               <p>She consults clients at Tardeo and Santacruz and is also involved in online consultations. In her leisure time Deepti enjoys listening to music, reading books about nutrition and loves to try out new recipes.</p>
             </div>
@@ -101,8 +101,8 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
-              <h3 class="brand-brown-dark">Adity Killa</h3>
-              <h4 class="brand-primary">Senior Nutritionist, Kolkata Branch Head</h4>
+              <h3 class="brand-brown-dark font-semibold">Adity Killa</h3>
+              <h4 class="brand-primary font-semibold">Senior Nutritionist, Kolkata Branch Head</h4>
               <p>Adity became a part of Selfcare in the year 2005. A graduate in Political Science and a diploma holder in Nutrition and Dietetics is not all that sets Adity apart from others in her city. She brings to the table warmth, empathy and dynamism and is also a certified Clinical Nutritionist.</p>
               <p>When Adity is not managing the branch or bringing in business, she loves to read and cook.</p>
             </div>
@@ -120,8 +120,8 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
-              <h3 class="brand-brown-dark">Dipti Patole Mayenkar</h3>
-              <h4 class="brand-primary">Senior Nutritionist</h4>
+              <h3 class="brand-brown-dark font-semibold">Dipti Patole Mayenkar</h3>
+              <h4 class="brand-primary font-semibold">Senior Nutritionist</h4>
               <p>One of the seniormost consultants, Dipti joined Selfcare in 2010. Having done a Master’s in Food Science & Nutrition from SNDT University, Mumbai, she is also qualified as a Diabetic Educator and certified in Physical Fitness and Weight Management from SNDT University. Her work profile at Selfcare includes nutritional consultations for Mumbai clients as well as online consultation for national and international clients. She also conducts corporate presentations on diet and food management and does research that will enhance knowledge in her natural penchant of Food Science and Nutrition. Dipti’s way of keeping fit is not using vehicles for shorter distances, as she likes walking with her music on.</p>
             </div>
           </div>
@@ -138,8 +138,8 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
 
           <div class="col-md-10 col-sm-9">
             <div class="member-detail">
-              <h3 class="brand-brown-dark">Shaikh Mona Afroz</h3>
-              <h4 class="brand-primary">Senior Nutritionist</h4>
+              <h3 class="brand-brown-dark font-semibold">Shaikh Mona Afroz</h3>
+              <h4 class="brand-primary font-semibold">Senior Nutritionist</h4>
               <p>Mona began working at Selfcare in 2011. After completing her graduation in Microbiology from G.N. Khalsa College (Mumbai) she achieved her postgraduate diploma in Nutrition and Dietetics from SNDT College (Juhu). She also completed a three-month internship at Nanavati Hospital (Vile Parle, Mumbai).</p>
               <p>She consults clients at the Tardeo and Santacruz branches and is also involved in consulting online clients all over India.</p>
               <p>Mona loves travelling and enjoys music.</p>
@@ -158,6 +158,6 @@ Her work profile at Selfcare includes administration, accounts, handling legal m
   </div>
 
   <div class="join-team text-center">
-    <a href="" class="btn btn-primary text-uppercase">Join our team</a>
+    <a href="" class="btn btn-primary text-uppercase font-semibold letter-space">Join our team</a>
   </div>
 </section>
